--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" 
+    href="https://img.freepik.com/premium-vector/kitchen-chef-cook-logo-design-vector-cooking-typography-design-element-your-business-food_285145-218.jpg?w=2000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Cook&Meal</title>
   </head>
   <body>
     <div id="root"></div>
